...
    <string name="btn_encrypt_text">"Encrypt text"</string>
    <string name="btn_add_email">"Add additional email address"</string>
    <string name="btn_unlock">"Unlock"</string>
    <string name="btn_proceed">"Proceed"</string>
    <string name="btn_save_default">"Save as default"</string>
...
    <string name="label_to">"Encrypt to"</string>
    <string name="label_delete_after_encryption">"Delete files after encryption"</string>
    <string name="label_symmetric">"Encrypt with password"</string>
    <string name="label_passphrase_cache_subs">"Remember passwords by subkey"</string>
    <string name="label_keyservers">"Manage OpenPGP keyservers"</string>
...
    <string name="wrong_passphrase">"Wrong password."</string>
    <string name="no_filemanager_installed">"No compatible file manager installed."</string>
    <string name="passphrases_do_not_match">"The passwords didn't match."</string>
    <string name="passphrase_must_not_be_empty">"Please enter a password."</string>
    <string name="passphrase_for_symmetric_encryption">"Enter password"</string>
...
    <!-- Navigation Drawer -->
    <string name="nav_keys">"Keys"</string>
    <string name="nav_encrypt_decrypt">"Encrypt/Decrypt"</string>
    <string name="nav_apps">"Apps"</string>
    <string name="my_keys">"My Keys"</string>
...
    <string name="msg_dc_clear_signature_bad">"Signature check NOT OK!"</string>
    <string name="msg_dc_clear_signature_check">"Verifying signature data"</string>
    <string name="msg_dc_clear_signature_ok">"Signature check OK"</string>
    <string name="msg_dc_clear_signature">"Saving signature data for later"</string>
    <string name="msg_dc_clear">"Processing cleartext data"</string>
...
    <string name="msg_se_error_output_uri_not_found">"Error opening URI for writing!"</string>
    <string name="msg_se_error_too_many_inputs">"More inputs than outputs specified! This is probably a programming error, please report!"</string>
    <string name="msg_se_success">"Sign/encrypt operation successful"</string>

    <!-- Messages for PgpSignEncrypt operation -->
...
    <string name="error_multi_clipboard">"Encryption of multiple files to clipboard not supported."</string>
    <string name="error_detached_signature">"Sign-only operation of binary files is not supported, select at least one encryption key."</string>
    <string name="error_empty_text">"Type some text to encrypt!"</string>
    <string name="error_log_share_internal">"Internal error while preparing log!"</string>

...
    <string name="security_token_error_try_again">"Try again"</string>
    <string name="security_token_not_supported">"This Security Token is not yet supported by OpenKeychain"</string>
    <string name="btn_delete_original">Delete original file</string>

    <string name="snack_encrypt_filenames_on">"Filenames <b>are</b> encrypted."</string>
...
    <string name="error_reading_aosp">"Failed reading data, this is a bug in the Android E-Mail client! (Issue #290)"</string>
    <string name="error_reading_k9">"Received incomplete data, try touching 'Download complete message' in K-9 Mail!"</string>
    <string name="filename_unknown">Unknown filename (touch to open)</string>
    <string name="filename_unknown_text">Text (touch to show)</string>
    <string name="filename_keys">"Key Backup (touch to import)"</string>
    <string name="intent_show">Show Signed/Encrypted Content</string>
...
