<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="4dp"
    android:paddingBottom="4dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:background="?android:attr/editTextBackground">

        <ViewAnimator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/result_encryption_icon"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:inAnimation="@anim/fade_in"
            android:outAnimation="@anim/fade_out"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/status_lock_open_24dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/status_lock_closed_24dp" />

        </ViewAnimator>

        <com.pchmn.materialchips.ChipsInput
            android:id="@+id/recipient_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            app:hint="@string/label_to"
            app:chip_hasAvatarIcon="false"
            app:maxRows="2"
            app:chip_detailed_backgroundColor="@color/colorChipViewBackground"
            />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/anchor_dropdown_encrypt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:padding="0dp"
        android:background="?android:attr/editTextBackground">

        <ViewAnimator
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/result_signature_icon"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:inAnimation="@anim/fade_in"
            android:outAnimation="@anim/fade_out">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/status_signature_unverified_cutout_24dp"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/status_signature_verified_cutout_24dp"
                />

        </ViewAnimator>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/md_black_1000"
                android:text="@string/label_asymmetric_from"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                />

            <org.sufficientlysecure.keychain.ui.widget.KeySpinner
                android:id="@+id/sign_key_spinner"
                android:minHeight="56dip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>