<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/passphrase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:imeOptions="actionNext|flagNoPersonalizedLearning"
        android:inputType="textPassword"
        android:hint="@string/label_passphrase"
        android:ems="10"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:id="@+id/passphraseAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:imeOptions="flagNoPersonalizedLearning"
        android:inputType="textPassword"
        android:hint="@string/label_passphrase_again"
        android:ems="10"
        android:layout_gravity="center_horizontal" />

</LinearLayout>